Fix alignment property in h3 style

--- a/style.css
+++ b/style.css
@@ -8,4 +8,5 @@ h1{font-size: 115px;
 h3{font-size: 40px;
    margin-top: 130px;
    margin-bottom: 60px;
+   align: center
   }
